# pyr

./: .gitignore  Cargo.toml  rustfmt.toml
benches/: pyr_benchmark.rs  pyrite_benchmark.rs
math-derive/: Cargo.toml
math-derive/src/: lib.rs
src/: lib.rs  main.rs  math.rs  num.rs
src/fps/: mod.rs
src/geometry/: mod.rs  sphere.rs
src/graphics/: color.rs  mod.rs
src/intersect/: mod.rs
src/math/: matrix.rs  matrix4.rs  mod.rs  quaternion.rs  vector.rs  vector1.rs  vector3.rs  vector4.rs  vector_functions.rs  vector_ops.rs
src/math/matrix/: traits.rs
src/math/vector/: array_wrapper.rs  macros.rs  ops.rs  prelude.rs  traits.rs  vector.rs  vector1.rs  vector2.rs  vector3.rs  vector4.rs  xyzw_accessor.rs
