[package]
name = "pyrite"
version = "0.1.0"
edition = "2018"
authors = ["block <block.cube.lib@gmail.com>"]

[dependencies]
num = "0.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "0.8.7"
serde_json = "1.0"
criterion = "0.3"

[[bench]]
name = "pyrite_benchmark"
harness = false
